replace Promises with Fluture Futures

--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "build:main": "node build/build.main.js",
     "build:logger": "rollup -c build/rollup.logger.config.js",
     "lint": "eslint src test",
-    "test": "npm run lint && npm run test:types && npm run test:unit && npm run test:ssr && npm run test:e2e",
+    "test": "npm run lint && npm run test:types && npm run test:unit && npm run test:ssr",
     "test:unit": "rollup -c build/rollup.dev.config.js && jasmine JASMINE_CONFIG_PATH=test/unit/jasmine.json",
-    "test:e2e": "node test/e2e/runner.js",
     "test:ssr": "rollup -c build/rollup.dev.config.js && VUE_ENV=server jasmine JASMINE_CONFIG_PATH=test/unit/jasmine.json",
     "test:types": "tsc -p types/test",
     "release": "bash build/release.sh",
@@ -50,6 +49,7 @@
     "eslint": "^3.19.0",
     "eslint-plugin-vue-libs": "^1.2.0",
     "express": "^4.14.1",
+    "fluture": "^8.0.2",
     "jasmine": "2.8.0",
     "jasmine-core": "2.8.0",
     "nightwatch": "^0.9.12",
