update name and authors

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vuex",
+  "name": "vuex-fluture",
   "version": "1.0.0-fluture",
-  "description": "state management for Vue.js",
+  "description": "state management for Vue.js with support for the fluture library",
   "main": "dist/vuex.common.js",
   "module": "dist/vuex.esm.js",
   "unpkg": "dist/vuex.js",
@@ -31,7 +31,9 @@
     "type": "git",
     "url": "git+https://github.com/vuejs/vuex.git"
   },
-  "author": "Evan You",
+  "authors": [
+    "Evan You", "Hannes Leutloff"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/vuejs/vuex/issues"
