try to fix typescript type definitions

--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -5,8 +5,7 @@
     "moduleResolution": "node",
     "lib": [
       "es5",
-      "dom",
-      "es2015.promise"
+      "dom"
     ],
     "strict": true,
     "noEmit": true
